@@ -63,12 +63,12 @@
     </section>
 
     <section>
-      <h2>The <a>CSSPoint</a> dictionary</h2>
+      <h2>The <a>Point</a> dictionary</h2>
       <p>
         A 2D points and 3D points are represented by the following WebIDL dictionary:
       </p>
 
-      <dl title='dictionary CSSPoint' class='idl'>
+      <dl title='dictionary Point' class='idl'>
         <dt>unrestricted double x = 0</dt>
         <dd>
           The x coordinate of the point.
@@ -129,6 +129,8 @@
 -->
     <section>
       <h2>The <a>CSSMatrix</a> interface</h2>
+
+      <p class="issue">The WG requested renaming the interface and omit the CSS prefix. Suggestions are TransformMatrix, TransformationMatrix or simply Matrix.</p>
 
       <p>
         The <a>CSSMatrix</a> interface represents a mathematical matrix with the purpose of describing transformations a graphical contexts. The following sections describe the details of the interface. For the full interface see <a href="#webidl-ref">Interface summary</a>.
@@ -688,11 +690,11 @@ matrix.rotateBy(45);
             <dd>
               Returns the determinant of the current matrix.
             </dd>
-            <dt>CSSPoint transformPoint()</dt>
+            <dt>Point transformPoint()</dt>
             <dd>
               <dl class='parameters'>
-                <dt>CSSPoint point</dt>
-                <dd>A CSSPoint dictionary.</dd>
+                <dt>Point point</dt>
+                <dd>A Point dictionary.</dd>
               </dl>
               The point is post-multiplied on the current matrix and returns the resulting point. <code>point</code> is not modified.
             </dd>
