@@ -1,3 +1,6 @@
+2013-08-22  Dirk Schulze  <dschulze@adobe.com>
+	Add issues about interface naming.
+
 2013-07-02  Dirk Schulze  <dschulze@adobe.com>
 	Rename Point dictionary to CSSPoint dictionary.
 
